# cis194

week2/logParse/: logParse.cabal
