
name:           logParse
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs:
      src
  build-depends:
      base
  exposed-modules:
      LogParse
  other-modules:
      Paths_logParse
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: LogParseSpec.hs
  hs-source-dirs:
      test
  build-depends:
      base
    , logParse
    , hspec
  default-language: Haskell2010